<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="230dp"
        android:layout_height="44dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="205dp"
        android:background="@drawable/edittext_border"
        android:textSize="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/fancy_grey"
         />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="230dp"
        android:layout_height="44dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="@string/password"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/fancy_grey"
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="230dp"
        android:layout_height="44dp"
        android:layout_marginLeft="88dp"
        android:textSize="20dp"
        android:layout_marginTop="330dp"
        android:background="@drawable/button_bg"
        android:text="@string/login"
        />

    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="380dp"
        android:background="@android:color/transparent"
        android:text="@string/forgot"
        android:textColor="@color/blue"
        android:onClick="forgotPw"
        />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="445dp"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textColor="@color/blue"
        />

    <TextView
        android:id="@+id/textViewOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="195dp"
        android:textSize="20dp"
        android:layout_marginTop="420dp"
        android:text="@string/or"
        android:textColor="@color/colorPrimary"
    />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="140dp"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="135dp"
      />

    <ImageButton
        android:id="@+id/imageButtonLCalculator"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="479dp"
        android:layout_marginLeft="300dp"
        android:tooltipText="Calculator"
        style="?android:attr/borderlessButtonStyle"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_017_calculator" />

</FrameLayout>