<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewAName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rname"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewAGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginTop="130dp"
         />

    <TextView
        android:id="@+id/textViewAIC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="180dp"
        android:text="@string/rIC"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewAPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="230dp"
        android:text="@string/rphonenum"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewAEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remail"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewADisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ashley Koh Ee Lyn"
        android:layout_marginTop="82dp"
        android:layout_marginLeft="223dp"
        android:textColor="@color/may_grey"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/textViewADisplayGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Female"
        android:layout_marginLeft="223dp"
        android:textColor="@color/may_grey"
        android:layout_marginTop="130dp"
        android:textSize="20dp"
 />

    <TextView
        android:id="@+id/textViewADisplayIC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="970202053261"
        android:textSize="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="223dp"
        android:textColor="@color/may_grey"/>

    <TextView
        android:id="@+id/textViewADisplayPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0162938623"
        android:textSize="20dp"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="223dp"
        />

    <TextView
        android:id="@+id/textViewADisplayEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ashleytan@gmail.com"
        android:textSize="18dp"
        android:layout_marginTop="282dp"
        android:layout_marginLeft="223dp"
 />

    <Button
        android:id="@+id/buttonADone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done"
        android:layout_marginTop="390dp"
        android:layout_marginLeft="150dp"
        android:background="@color/colorPrimaryLight"/>

    <TextView
        android:id="@+id/textViewAPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="330dp"
        android:text="@string/position"
        android:textColor="@color/black"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/textViewADisplayPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="223dp"
        android:textSize="20dp"
        android:layout_marginTop="330dp"
        android:text="Secretary"
         />

    <Button
        android:id="@+id/buttonAChangePassword"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:text="@string/changepassword"
        android:background="@android:color/transparent"
        android:textColor="@color/blue"
        android:layout_marginTop="450dp"
 />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/edit"
        android:scaleType="fitCenter"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="30dp"
        android:background="@null"/>

</FrameLayout>