<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewUName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rname"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="35dp"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewUGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="35dp"
        android:textColor="@color/black"
        android:textSize="20dp"/>


    <TextView
        android:id="@+id/textViewUIC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="210dp"
        android:text="@string/rIC"
        android:textColor="@color/black"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/textViewUPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:text="@string/rphonenum"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginTop="270dp"
        />

    <TextView
        android:id="@+id/textViewUEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remail"
        android:layout_marginLeft="35dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginTop="330dp"
         />

    <TextView
        android:id="@+id/textViewUDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bryan Lim Kok Seng"
        android:textSize="18dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="230dp"
        android:textColor="@color/may_grey"/>

    <TextView
        android:id="@+id/textViewUDisplayGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Male"
        android:layout_marginLeft="230dp"
        android:textColor="@color/may_grey"
        android:layout_marginTop="150dp"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/textViewUDisplayIC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="970202053261"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="230dp"
        android:textColor="@color/may_grey"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewUDisplayPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0162938623"
        android:textSize="20dp"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="230dp"
 />

    <TextView
        android:id="@+id/textViewUDisplayEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="bryanlim@gmail.com"
        android:textSize="18dp"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="230dp"
        />

    <Button
        android:id="@+id/buttonUDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="180dp"
        android:textSize="20dp"
        android:background="@color/colorPrimaryLight"/>

    <Button
        android:id="@+id/buttonUChangePassword"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:text="@string/changepassword"
        android:background="@android:color/transparent"
        android:textColor="@color/blue"
        android:layout_marginTop="460dp"
        android:layout_marginLeft="25dp"
 />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/edit"
        android:background="@color/white"/>


</FrameLayout>